--- a/css/catalog.css
+++ b/css/catalog.css
@@ -35,10 +35,10 @@
 }
 
 .flags__button {
+	display: inline-block;
 	width: 32px;
 	height: 32px;
 	border-radius: 50%;
-	border: none;
 	transition-property: box-shadow;
 	transition-duration: 0.3s;
 }
@@ -153,11 +153,16 @@
 .artists-catalog__link {
 	margin-left: -4px;
 	padding: 0 4px;
+	background-image: none;
+	background-position: 0 1.2em;
+	background-repeat: no-repeat;
+	background-size: 100% 1px;
+	background-clip: content-box;
 }
 
 .artists-catalog__link:hover {
 	color: var(--purple);
-	text-decoration: underline;
+	background-image: linear-gradient(var(--purple) 0%, var(--purple) 100%);
 }
 
 .artists-catalog__link:active {
@@ -303,13 +308,8 @@
 		padding-top: 89px;
 	}
 
-	.catalog__container {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-	}
-
 	.catalog__header {
+		justify-content: flex-start;
 		margin-bottom: 6px;
 	}
 
@@ -325,13 +325,17 @@
 		margin-bottom: 39px;
 	}
 
+	.artists-tab {
+		display: flex;
+	}
+
 	.artists-catalog {
-		order: 4;
+		order: 2;
 		flex-basis: 47%;
 	}
 
 	.artist-details {
-		order: 3;
+		order: 1;
 		flex-basis: 47%;
 		margin-right: 50px;
 	}
