--- a/css/catalog.css
+++ b/css/catalog.css
@@ -24,6 +24,7 @@
 	border-radius: 50%;
 	transition-property: box-shadow;
 	transition-duration: 0.3s;
+	outline: none;
 }
 
 .flags__item:first-child {
@@ -68,7 +69,7 @@
 }
 
 .flags__button:active,
-.flags__item:focus-within {
+.flags__item.active {
 	box-shadow: 0 0 0 2px var(--purple) inset;
 }
 
