--- a/css/events.css
+++ b/css/events.css
@@ -10,7 +10,6 @@
 	box-sizing: border-box;
 	height: 683px;
 	margin-bottom: 25px;
-	padding-bottom: 55px;
 	border: 1px solid var(--light-grey);
 }
 
@@ -27,7 +26,7 @@
 }
 
 .event-card__small-text {
-	margin-right: 10px;
+	padding-right: 10px;
 	margin-bottom: 7px;
 	text-align: right;
 	font-size: 12px;
@@ -47,7 +46,9 @@
 	flex-direction: column;
 	justify-content: space-between;
 	height: 327px;
-	margin: 0 10px 30px 27px;
+	margin-right: 10px;
+	margin-bottom: 30px;
+	padding-left: 27px;
 }
 
 .event-card__text {
@@ -56,12 +57,25 @@
 }
 
 .event-card__link {
-	margin-left: 27px;
-	padding-bottom: 2px;
+	margin-left: 21px;
+	padding: 2px 6px 6px;
 	color: var(--purple);
-	border-bottom: 1px solid var(--purple);
+	background-image: linear-gradient(var(--purple) 0%, var(--purple) 100%);
+	background-position: 0 1.4em;
+	background-repeat: no-repeat;
+	background-size: 100% 1px;
+	background-clip: content-box;
+	transition-property: font-weight;
 }
 
+.event-card__link:hover {
+	font-weight: 700;
+}
+
+.event-card__link:active {
+	color: var(--dark-purple);
+	background-image: linear-gradient(var(--dark-purple) 0%, var(--dark-purple) 100%);
+}
 .events-swiper__pagination {
 	position: relative;
 }
@@ -124,6 +138,14 @@
 		color: var(--purple);
 	}
 
+	.events-enable-btn:hover {
+		border: 2px solid var(--light-purple);
+	}
+
+	.events-enable-btn:active {
+		border: 2px solid var(--dark-purple);
+	}
+
 	.event-card_third,
 	.event-card_last {
 		display: none;
@@ -165,13 +187,15 @@
 	}
 
 	.event-card__small-text {
-		margin-right: 17px;
+		padding-right: 17px;
 	}
 
 	.event-card__text-wrap {
 		justify-content: flex-start;
 		height: 260px;
-		margin: 0 30px 23px 50px;
+		margin-right: 30px;
+		margin-bottom: 23px;
+		padding-left: 50px;
 	}
 
 	.event-card__text {
@@ -179,6 +203,6 @@
 	}
 
 	.event-card__link {
-		margin-left: 50px;
+		margin-left: 44px;
 	}
 }
