--- a/css/selectric.css
+++ b/css/selectric.css
@@ -12,18 +12,12 @@
 
 .selectric {
 	margin-bottom: -1px;
-  border: 1px solid var(--grey);
+	border: 1px solid var(--grey);
+	border-radius: 6px;
   background: transparent;
 	position: relative;
+	overflow: hidden;
 	transition: 0.3s;
-}
-
-.selectric-selectric_top .selectric {
-	border-radius: 6px 6px 0 0;
-}
-
-.selectric-selectric_bottom .selectric {
-	border-radius: 0 0 6px 6px;
 }
 
 .selectric .label {
@@ -81,9 +75,7 @@
 }
 
 .selectric-hover .selectric {
-	border-radius: 6px;
 	border-color: var(--white);
-	z-index: 10;
 }
 
 .selectric-hover .selectric .button {
@@ -92,14 +84,6 @@
 
 .selectric-hover .selectric .button:after {
   border-color: var(--white);
-}
-
-.selectric-selectric_top.selectric-hover + .selectric-wrapper .selectric {
-	border-radius: 6px 6px 0 0;
-}
-
-.selectric-selectric_middle.selectric-hover + .selectric-wrapper .selectric {
-	border-radius: 6px;
 }
 
 .selectric-open {
@@ -112,7 +96,7 @@
 }
 
 .selectric-open .selectric-items {
-  display: block;
+	display: block;
 }
 
 .selectric-disabled {
@@ -185,8 +169,8 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background: var(--black);
-	border: 1px solidvar(--white);
+  background: transparent;
+	border: 1px solid var(--grey);
 	border-radius: 6px;
   z-index: -1;
 	box-shadow: 0 0 10px -6px;
@@ -207,19 +191,22 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  font-size: 12px;
+  font-size: 16px;
   line-height: 20px;
   min-height: 20px;
 }
 
 .selectric-items li {
-  display: block;
+	display: block;
   padding: 8px;
-  border-top: 1px solidvar(--white);
-  border-bottom: 1px solid #EEE;
-  color:var(--white);
+  border-bottom: 1px solid var(--grey);
+  color: var(--grey);
 	cursor: pointer;
 	transition-duration: 0.3s;
+}
+
+.selectric-items li:last-child {
+	border-bottom: none;
 }
 
 .selectric-items li.selected {
@@ -238,7 +225,6 @@
 }
 
 .selectric-items .disabled {
-	display: none;
   filter: alpha(opacity=50);
   opacity: 0.5;
   cursor: default !important;
@@ -269,4 +255,8 @@
 
 .selectric-items .selectric-group li {
   padding-left: 25px;
+}
+
+.selectric-items .selected {
+	display: none;
 }
