--- a/css/events.css
+++ b/css/events.css
@@ -25,8 +25,12 @@
 	width: 100%;
 }
 
-.event-card__small-text {
+.event-card__body {
 	padding-right: 10px;
+	padding-left: 27px;
+}
+
+.event-card__small-text {
 	margin-bottom: 7px;
 	text-align: right;
 	font-size: 12px;
@@ -46,9 +50,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	height: 327px;
-	margin-right: 10px;
 	margin-bottom: 30px;
-	padding-left: 27px;
 }
 
 .event-card__text {
@@ -57,7 +59,7 @@
 }
 
 .event-card__link {
-	margin-left: 21px;
+	margin-left: -6px;
 	padding: 2px 6px 6px;
 	color: var(--purple);
 	background-image: linear-gradient(var(--purple) 0%, var(--purple) 100%);
@@ -186,23 +188,19 @@
 		margin-bottom: 14px;
 	}
 
-	.event-card__small-text {
+	.event-card__body {
 		padding-right: 17px;
+		padding-left: 50px;
 	}
 
 	.event-card__text-wrap {
 		justify-content: flex-start;
 		height: 260px;
-		margin-right: 30px;
 		margin-bottom: 23px;
-		padding-left: 50px;
+		padding-right: 30px;
 	}
 
 	.event-card__text {
-		padding-right: 20px;
-	}
-
-	.event-card__link {
-		margin-left: 44px;
+		padding-right: 0;
 	}
 }
