--- a/css/publications.css
+++ b/css/publications.css
@@ -39,10 +39,18 @@
 }
 
 .categories-fieldset__checkbox {
-	display: block;
+	display: none;
 	position: relative;
+	height: 0;
 	padding: 10px 0 10px 24px;
 	border-bottom: 1px solid #fff8;
+	transition-property: height;
+	transition-duration: 0.3s;
+}
+
+.categories-fieldset__checkbox.active {
+	display: block;
+	height: auto;
 }
 
 .checkbox__input {
