--- a/css/projects.css
+++ b/css/projects.css
@@ -12,9 +12,59 @@
 }
 
 .alert {
+	position: relative;
+	display: inline-block;
 	width: 16px;
 	height: 16px;
 	margin-bottom: -3px;
+	background-image: url('../img/alert.svg');
+}
+
+.alert:hover {
+	background-image: url('../img/alert-hover.svg');
+}
+
+.alert::after {
+	position: absolute;
+	display: none;
+	bottom: 30px;
+	left: -117px;
+	width: 250px;
+	padding: 10px;
+	background-color: var(--light-grey);
+	text-align: center;
+	font-size: 12px;
+	line-height: 1.3em;
+	color: var(--white);
+}
+
+.alert::before {
+	content: "";
+	position: absolute;
+	display: none;
+	bottom: 25px;
+	left: 3px;
+	width: 10px;
+	height: 10px;
+	background-color: var(--light-grey);
+	transform: rotate(45deg);
+}
+
+.alert:hover::after,
+.alert:hover::before {
+	display: block;
+}
+
+.alert_1::after {
+	content: "Пример современных тенденций - современная методология разработки ";
+}
+
+.alert_2::after {
+	content: "Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы вызывают у вас эмоции  ";
+}
+
+.alert_3::after {
+	content: "В стремлении повысить качество ";
 }
 
 .paragraph__link {
