--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,9 +1,10 @@
 .contacts {
 	padding-top: 3px;
-	padding-bottom: 30px;
+	padding-bottom: 28px;
 }
 
 .contacts__container {
+	position: relative;
 	padding: 0;
 }
 
@@ -21,14 +22,16 @@
 
 .contacts__subtext {
 	padding-left: 15px;
-	margin-bottom: 20px;
+	margin-bottom: 364px;
 	font-size: 14px;
 }
 
 #map {
+	position: absolute;
+	left: 0;
+	top: 100px;
 	width: 100%;
 	height: 320px;
-	margin-bottom: 25px;
 }
 
 .ymaps-2-1-78-ground-pane {
@@ -37,7 +40,7 @@
 
 .contacts__form-heading {
 	padding-left: 15px;
-	margin-bottom: 20px;
+	margin-bottom: 22px;
 	font-weight: 400;
 	font-size: 18px;
 }
@@ -96,61 +99,49 @@
 
 @media(min-width: 768px) {
 	.contacts {
-		padding-top: 36px;
+		padding-top: 35px;
 		padding-bottom: 0;
 	}
 
+	.contacts__container {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+	}
+
 	.contacts__heading {
+		width: 100%;
 		padding-left: 50px;
-		margin-bottom: 20px;
+		margin-bottom: 21px;
 	}
 
 	.contacts__block {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-		max-width: 100%;
+		width: 430px;
 		height: 700px;
-		padding-left: 50px;
+		padding: 124px 45px 104px 50px;
 		border: 1px solid var(--light-grey);
 	}
 
 	.contacts__subheading {
-		width: fit-content;
-		margin-bottom: 13px;
 		padding-left: 0;
-		padding-top: 125px;
+		margin-bottom: 14px;
 		font-size: 24px;
 	}
 
 	.contacts__subtext {
-		width: fit-content;
 		padding-left: 0;
-		margin-bottom: 36px;
+		margin-bottom: 37px;
 		font-size: 16px;
 	}
 
-	#map {
-		position: absolute;
-		top: 0;
-		left: 430px;
-		width: calc(100% - 430px);
-		height: 100%;
-		border-left: 1px solid var(--light-grey);
-	}
-
 	.contacts__form-heading {
-		width: fit-content;
 		padding-left: 0;
-		margin-bottom: 20px;
+		margin-bottom: 19px;
 		font-size: 24px;
 	}
 
 	.contacts-form {
-		width: 380px;
-		padding-left: 0;
-		padding-right: 45px;
+		padding: 0;
 		margin-bottom: 40px;
 	}
 
@@ -167,7 +158,6 @@
 
 	.social-list {
 		padding-left: 0;
-		width: fit-content;
 	}
 
 	.social-list__item:not(:last-child) {
@@ -178,26 +168,41 @@
 		width: 60px;
 		height: 60px;
 	}
+
+	#map {
+		position: static;
+		width: calc(100% - 430px);
+		height: 700px;
+	}
 }
 
 @media(min-width: 1024px) {
-	.contacts-form {
-		width: 427px;
-		padding-left: 0;
-		padding-right: 45px;
-		margin-bottom: 40px;
-	}
-
-	.contacts-form__input {
-		width: 335px;
+	.contacts__block {
+		width: 487px;
+		padding: 124px 102px 104px 50px;
 	}
 
 	#map {
-		left: 487px;
 		width: calc(100% - 487px);
+		height: 700px;
 	}
 }
 
 @media(min-width: 1650px) {
+	:root {
+		--padding: calc((100% - 1600px) / 2)
+	}
 
+	.contacts__heading {
+		padding-left: var(--padding);
+	}
+
+	.contacts__block {
+		width: calc(var(--padding) + 521px);
+		padding: 124px 122px 124px var(--padding);
+	}
+
+	#map {
+		width: calc(100% - var(--padding) - 521px);
+	}
 }
