--- a/css/styles.css
+++ b/css/styles.css
@@ -112,5 +112,13 @@
 }
 
 @media(min-width: 1650px) {
+	.link-reset {
+		cursor: pointer;
+	}
 
+	.container {
+		width: 1600px;
+		margin: 0 auto;
+		padding: 0;
+	}
 }
