--- a/css/info.css
+++ b/css/info.css
@@ -76,7 +76,7 @@
 	}
 }
 
-@media(min-width: 1650px) {
+@media(min-width: 1200px) {
 	.info {
 		min-height: 700px;
 		padding-top: 141px;
@@ -116,4 +116,8 @@
 	.subscribe-btn:focus:not(.focus-visible) {
 		box-shadow: none;
 	}
+}
+
+@media(min-width: 1650px) {
+
 }
