--- a/css/projects.css
+++ b/css/projects.css
@@ -216,13 +216,18 @@
 	}
 }
 
-@media(min-width: 1650px) {
+@media(min-width: 1200px) {
 	.projects__paragraph {
 		max-width: 1080px;
 	}
 
+	.partners {
+		width: 1100px;
+		margin: 0 auto;
+	}
+
 	.projects-swiper {
-		width: 1450px;
+		width: 1000px;
 	}
 
 	.projects-card {
@@ -238,5 +243,16 @@
 
 	.projects-swiper__button {
 		top: 60px;
+	}
+}
+
+@media(min-width: 1650px) {
+	.partners {
+		width: auto;
+		margin: 0;
+	}
+
+	.projects-swiper {
+		width: 1450px;
 	}
 }
