--- a/css/gallery.css
+++ b/css/gallery.css
@@ -127,6 +127,49 @@
 	background-image: linear-gradient(var(--dark-purple) 0%, var(--dark-purple) 100%);
 }
 
+.gallery__modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 15px;
+	background-color: #0008;
+	z-index: 10;
+	transition-duration: 0.3s;
+}
+
+.gallery__img-big {
+	display: block;
+	width: 100%;
+	margin: auto;
+}
+
+.gallery__description {
+	font-size: 18px;
+	text-align: center;
+}
+
+.close-btn {
+	display: block;
+	min-width: 150px;
+	margin: 0 auto;
+	padding: 10px;
+	border: none;
+	border-radius: 20px;
+	background-color: var(--purple);
+	font-size: 18px;
+	font-weight: 700;
+	color: var(--white);
+	transition-property: box-shadow, background-color;
+	transition-duration: 0.3s;
+}
+
+.close-btn:active {
+	box-shadow: 0 0 0 2px var(--light-purple) inset;
+	background-color: var(--dark-purple);
+}
+
 @media(min-width: 768px) {
 	.gallery {
 		padding-top: 85px;
@@ -171,6 +214,22 @@
 	.gallery__img {
 		width: 100%;
 		height: auto;
+	}
+
+	.gallery__modal {
+		padding: 50px;
+	}
+
+	.gallery__img-big {
+		height: 80%;
+		width: auto;
+	}
+
+	.close-btn {
+		min-width: 250px;
+		padding: 13px;
+		border-radius: 30px;
+		font-size: 24px;
 	}
 }
 
