--- a/css/header.css
+++ b/css/header.css
@@ -85,7 +85,8 @@
 	color: var(--white);
 }
 
-.menu-close-btn {
+.menu-close-btn,
+.search-close-btn {
 	width: 15px;
 	height: 15px;
 	position: relative;
@@ -96,7 +97,9 @@
 }
 
 .menu-close-btn::before,
-.menu-close-btn::after {
+.menu-close-btn::after,
+.search-close-btn::before,
+.search-close-btn::after {
 	content: "";
 	position: absolute;
 	top: 6px;
@@ -106,11 +109,13 @@
 	background-color: var(--white);
 }
 
-.menu-close-btn::before {
+.menu-close-btn::before,
+.search-close-btn::before {
 	transform: rotate(45deg);
 }
 
-.menu-close-btn::after {
+.menu-close-btn::after,
+.search-close-btn::after {
 	transform: rotate(-45deg);
 }
 
@@ -132,6 +137,45 @@
 	background-size: 9px 9px;
 	font-size: 12px;
 	font-weight: 600;
+}
+
+.search-form {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding: 33px 60px 20px 57px;
+	background-color: #0006;
+	backdrop-filter: blur(40px);
+	color: var(--white);
+}
+
+.search-close-btn {
+	position: absolute;
+	top: 16px;
+	right: 17px;
+	margin: 0;
+}
+
+.search-form__btn {
+	width: 16px;
+	height: 16px;
+	border: none;
+	background-color: transparent;
+	background-image: url('../img/search.svg');
+	background-size: contain;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	vertical-align: bottom;
+}
+
+.search-form__input {
+	width: 179px;
+	padding-bottom: 3px;
+	border: none;
+	border-bottom: 1px solid var(--white);
+	background-color: transparent;
 }
 
 @media(min-width: 768px) {
@@ -216,6 +260,65 @@
 		background-position: 35% 50%;
 		background-size: 13px 13px;
 		font-size: 18px;
+	}
+
+	.search-form {
+		padding: 35px 50px;
+		background-color: var(--black);
+		backdrop-filter: none;
+	}
+
+	.search-close-btn {
+		position: relative;
+		top: auto;
+		right: auto;
+		width: 29px;
+		height: 29px;
+		vertical-align: middle;
+	}
+
+	.search-close-btn::before,
+	.search-close-btn::after {
+		top: 12px;
+		width: 37px;
+		height: 3px;
+	}
+
+	.search-form__btn {
+		width: 29px;
+		height: 29px;
+		margin-right: 7px;
+		vertical-align: middle;
+	}
+
+	.search-form__input {
+		width: 576px;
+		height: 29px;
+		margin-right: 15px;
+		vertical-align: middle;
+	}
+}
+
+@media(min-width: 1024px) {
+	.search-form {
+		padding: 0;
+		top: 35px;
+		left: auto;
+		right: 50px;
+		width: auto;
+	}
+
+	.search-close-btn {
+		display: none;
+	}
+
+	.search-form__btn {
+		margin-right: 7px;
+	}
+
+	.search-form__input {
+		width: 218px;
+		margin-right: 0;
 	}
 }
 
@@ -530,8 +633,10 @@
 
 	.search-form {
 		display: flex;
+		position: static;
 		margin-right: -6px;
 		padding: 6px;
+		background-color: transparent;
 		transition-property: box-shadow;
 		transition-duration: 0.3s;
 	}
@@ -541,17 +646,11 @@
 		height: 22px;
 		margin-right: 11px;
 		align-self: flex-end;
-		border: none;
-		background-color: transparent;
-		background-image: url('../img/search.svg');
-		background-size: contain;
-		background-position: bottom;
 		transition-property: background-image;
 		transition-duration: 0.3s;
 	}
 
 	.search-form__input {
-		width: 218px;
 		padding-left: 0;
 		padding-top: 3px;
 		padding-bottom: 3px;
