--- a/css/gallery.css
+++ b/css/gallery.css
@@ -127,7 +127,7 @@
 	background-image: linear-gradient(var(--dark-purple) 0%, var(--dark-purple) 100%);
 }
 
-.gallery__modal {
+.gallery-modal {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -139,35 +139,84 @@
 	transition-duration: 0.3s;
 }
 
-.gallery__img-big {
-	display: block;
+.gallery-modal__container {
+	position: relative;
+	display: flex;
+	flex-direction: column;
 	width: 100%;
-	margin: auto;
+	height: 100%;
+	box-shadow: 0 0 80px #000d;
 }
 
-.gallery__description {
-	font-size: 18px;
-	text-align: center;
+.gallery-modal__img-container {
+	width: 100%;
+	height: 200px;
+	overflow: hidden;
+}
+
+.gallery-modal__img {
+	display: block;
+	width: 100%;
+}
+
+.gallery-modal__text-block {
+	width: 100%;
+	height: calc(100% - 200px);
+	padding: 20px;
+	background-color: var(--white);
+	overflow-y: auto;
+	color: var(--black);
+}
+
+.gallery-modal__heading {
+	font-size: 24px;
+	font-weight: 600;
+	margin-bottom: 3px;
+}
+
+.gallery-modal__subheading {
+	font-weight: 600;
+	margin-bottom: 5px;
+}
+
+.gallery-modal__subtext {
+	font-size: 12px;
+	color: #969696;
+	margin-bottom: 5px;
+}
+
+.gallery-modal__description {
+	line-height: 2;
 }
 
 .close-btn {
-	display: block;
-	min-width: 150px;
-	margin: 0 auto;
-	padding: 10px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	width: 15px;
+	height: 15px;
+	padding: 0;
 	border: none;
-	border-radius: 20px;
-	background-color: var(--purple);
-	font-size: 18px;
-	font-weight: 700;
-	color: var(--white);
-	transition-property: box-shadow, background-color;
-	transition-duration: 0.3s;
+	background-color: transparent;
 }
 
-.close-btn:active {
-	box-shadow: 0 0 0 2px var(--light-purple) inset;
-	background-color: var(--dark-purple);
+.close-btn::before,
+.close-btn::after {
+	content: "";
+	position: absolute;
+	top: 6px;
+	left: 0;
+	width: 20px;
+	height: 1px;
+	background-color: var(--black);
+}
+
+.close-btn::before {
+	transform: rotate(45deg);
+}
+
+.close-btn::after {
+	transform: rotate(-45deg);
 }
 
 @media(min-width: 768px) {
@@ -216,20 +265,59 @@
 		height: auto;
 	}
 
-	.gallery__modal {
+	.gallery-modal {
 		padding: 50px;
 	}
 
-	.gallery__img-big {
-		height: 80%;
+	.gallery-modal__container {
+		flex-direction: row;
+		width: fit-content;
+		margin: 0 auto;
+	}
+
+	.gallery-modal__img-container {
+		display: inline-block;
+		width: 300px;
+		height: 100%;
+	}
+
+	.gallery-modal__img {
+		height: 100%;
 		width: auto;
 	}
 
+	.gallery-modal__text-block {
+		display: inline-block;
+		width: calc(100% - 300px);
+		height: 100%;
+		padding: 123px 50px 50px;
+	}
+
+	.gallery-modal__heading {
+		margin-bottom: 5px;
+	}
+
+	.gallery-modal__subheading {
+		margin-bottom: 5px;
+	}
+
+	.gallery-modal__subtext {
+		margin-bottom: 35px;
+	}
+
 	.close-btn {
-		min-width: 250px;
-		padding: 13px;
-		border-radius: 30px;
-		font-size: 24px;
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		width: 16px;
+		height: 16px;
+		padding: 0;
+		border: none;
+	}
+
+	.close-btn::before,
+	.close-btn::after {
+		width: 21px;
 	}
 }
 
@@ -267,6 +355,18 @@
 		height: 674px;
 		margin: 0;
 		padding-top: 20px;
+	}
+
+	.gallery-modal {
+		padding: 50px 0;
+	}
+
+	.gallery-modal__img-container {
+		width: 264px;
+	}
+
+	.gallery-modal__text-block {
+		width: 330px;
 	}
 }
 
@@ -333,6 +433,28 @@
 
 	.gallery__slide:active::before {
 		opacity: 1;
+	}
+
+	.gallery-modal {
+		padding: 200px 0;
+	}
+
+	.gallery-modal__container {
+		width: 900px;
+		height: 500px;
+	}
+
+	.gallery-modal__img-container {
+		width: 400px;
+	}
+
+	.gallery-modal__img {
+		width: 100%;
+		height: auto;
+	}
+
+	.gallery-modal__text-block {
+		width: 500px;
 	}
 }
 
