--- a/css/header.css
+++ b/css/header.css
@@ -151,6 +151,12 @@
 	color: var(--white);
 }
 
+.search-form__container {
+	display: flex;
+	align-items: flex-end;
+	margin: 0 auto;
+}
+
 .search-close-btn {
 	position: absolute;
 	top: 16px;
@@ -161,6 +167,7 @@
 .search-form__btn {
 	width: 16px;
 	height: 16px;
+	margin-right: 3px;
 	border: none;
 	background-color: transparent;
 	background-image: url('../img/search.svg');
@@ -171,7 +178,8 @@
 }
 
 .search-form__input {
-	width: 179px;
+	min-width: 179px;
+	flex-grow: 1;
 	padding-bottom: 3px;
 	border: none;
 	border-bottom: 1px solid var(--white);
@@ -274,7 +282,6 @@
 		right: auto;
 		width: 29px;
 		height: 29px;
-		vertical-align: middle;
 	}
 
 	.search-close-btn::before,
@@ -288,14 +295,12 @@
 		width: 29px;
 		height: 29px;
 		margin-right: 7px;
-		vertical-align: middle;
 	}
 
 	.search-form__input {
-		width: 576px;
+		min-width: 576px;
 		height: 29px;
 		margin-right: 15px;
-		vertical-align: middle;
 	}
 }
 
