--- a/css/header.css
+++ b/css/header.css
@@ -178,7 +178,7 @@
 }
 
 .search-form__input {
-	min-width: 179px;
+	width: 179px;
 	flex-grow: 1;
 	padding-bottom: 3px;
 	border: none;
@@ -298,7 +298,7 @@
 	}
 
 	.search-form__input {
-		min-width: 576px;
+		width: 576px;
 		height: 29px;
 		margin-right: 15px;
 	}
@@ -656,6 +656,7 @@
 	}
 
 	.search-form__input {
+		flex-grow: 0;
 		padding-left: 0;
 		padding-top: 3px;
 		padding-bottom: 3px;
